2007-04-23  Philip Van Hoof  <pvanhoof@gnome.org>

	* Introduction of the TnyStatus infrastructure
	* Changed the TnyStatusCallback function prototype to reflect the
	TnyStatus changes
	* Updated the demo-ui to start using the TnyStatus infrastructure

	* This was a major API change

2007-04-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Created a TnyGenericSendQueue which implements TnySendQueue in a
	generic way (doesn't strictly depend on the libtinymail-camel impl
	libraries like the TnyCamelSendQueue type)
	* Added the status_callback to tny_folder_get_msg_async
	* Renamed the TnyFolderRefreshStatusCallback to TnyStatusCallback

	* This was a minor API change (new type added)
	* This was a major API change for tny_folder_get_msg_async and
	tny_folder_refresh_async (TnyStatusCallback added and renamed)

2007-04-21  Philip Van Hoof  <pvanhoof@gnome.org>

	* Made TnyGetMsgQueue not care about the folder (it'll use the
	tny_header_get_folder API)

	* This was a major API change

2007-04-20  Philip Van Hoof  <pvanhoof@gnome.org>

	* Further implementing of TnyMergeFolder
	* Bugfixes in camel-lite (concurrent camel_folder_get_message on
	folders that are not selected)
	* Introduction of libtinymail-queues (which depens on asyncworker)

	* This was a major API change

2007-04-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* Further implementing of TnyMergeFolder
	* Bugfixing of several trac tickets (like #39)

2007-04-18  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect),
	(tny_maemo_conic_device_disconnect),
	(tny_maemo_conic_device_get_current_iap_id),
	(tny_maemo_conic_device_get_iap),
	(tny_maemo_conic_device_get_iap_list),
	(tny_maemo_conic_device_free_iap_list):
	* libtinymail-maemo/tny-maemo-conic-device.h:
	Take a TnyMaemoConicDevice* instead of a TnyDevice, as that is 
	the convention for derived/implemented objects.